# unplugin-parcel-macros

./: .gitignore  Cargo.toml  LICENSE  PackageManager.js  README.md  index.d.ts  index.js  package.json  unplugin-macros.d.ts  unplugin-macros.js  wasm.mjs
.cargo/: config.toml
.github/workflows/: CI.yml  release.yml  test.yml
examples/next/: macro.js  next.config.mjs  package.json  tsconfig.json
examples/next/app/: layout.js  page.js  page.tsx
examples/vite/: .gitignore  main.js  package.json  vite.config.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  resolver.rs
