[package]
edition = "2021"
name = "unplugin-parcel-macros"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.12.5"
napi = {version =  "2.12.6", features = ["serde-json", "napi4", "napi5"]}
parcel-macros = { git = "https://github.com/parcel-bundler/parcel.git", features = ["napi"] }
indexmap = "1.9.2"
rayon = "1.7.0"
crossbeam-channel = "0.5.6"
swc_core = { version = "0.89.6", features = [
  "common",
  "common_ahash",
  "common_sourcemap",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_codegen",
] }
swc_error_reporters = "0.17.12"

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.25", default-features = false }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
