[package]
edition = "2021"
name = "unplugin-parcel-macros"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.12.5"
napi = {version =  "2.12.6", features = ["serde-json", "napi4", "napi5"]}
parcel-macros = { git = "https://github.com/parcel-bundler/parcel.git", features = ["napi"] }
indexmap = "1.9.2"
rayon = "1.7.0"
crossbeam-channel = "0.5.6"
swc_core = { version = "0.106", features = [
  "common",
  "common_ahash",
  "common_sourcemap",
  "common_concurrent",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_codegen",
  "ecma_utils"
] }
swc_error_reporters = "1.0.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
