[package]
edition = "2021"
name = "unplugin-parcel-macros"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.12.5"
napi = {version =  "2.12.6", features = ["serde-json", "napi4", "napi5"]}
parcel-macros = { git = "https://github.com/parcel-bundler/parcel.git", features = ["napi"] }
indexmap = "1.9.2"
rayon = "1.7.0"
crossbeam-channel = "0.5.6"
swc_core = { version = "21", features = [
  "common",
  "common_sourcemap",
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "ecma_codegen",
  "ecma_utils"
] }
swc_error_reporters = "10.0.0"
parcel-resolver = { git = "https://github.com/parcel-bundler/parcel.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parcel-dev-dep-resolver = { git = "https://github.com/parcel-bundler/parcel.git" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"], default-features = false }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
